Implementar estadisticas, logica de prevencio de duplicados y detalles finales.