@@ -5,11 +5,7 @@ import com.challenge.literalura.Repository.AutorRepository;
 import com.challenge.literalura.Repository.LibroRepository;
 import com.challenge.literalura.Service.ConsumoAPI;
 import com.challenge.literalura.Service.ConvierteDatos;
-
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
-import java.util.Scanner;
+import java.util.*;
 
 public class Principal {
     private ConsumoAPI consumoAPI = new ConsumoAPI();
@@ -36,6 +32,7 @@ public class Principal {
                 3 - Listar autor registrados
                 4 - Listar autor vivos en un determinado año
                 5 - Listar libros por idioma
+                6 - Mostrar estadisticas
                 0 - Salir
                 """;
             System.out.println(menu);
@@ -48,6 +45,7 @@ public class Principal {
                 case 3 -> listarAutores();
                 case 4 -> autoresVivosPorFecha();
                 case 5 -> filtrarLibrosPorIdioma();
+                case 6 -> mostarEstadisticas();
                 case 0 -> System.out.println("Cerrando la aplicación...");
                 default -> System.out.println("Opción inválida");
             }
@@ -116,7 +114,7 @@ public class Principal {
                 """);
         var opcion = lectura.nextLine();
         try {
-            Idioma idiomaSeleccionado = Idioma.fromString(opcion);
+            Idioma idiomaSeleccionado = Idioma.fromMenu(opcion);
             List<Libro> libros = libroRepository.findByIdioma(idiomaSeleccionado);
 
             if (libros.isEmpty()) {
@@ -129,6 +127,25 @@ public class Principal {
         }
     }
 
+    private void mostarEstadisticas() {
+        List<Libro> libros = libroRepository.findAll();
+        if (libros.isEmpty()) {
+            IO.println("No hay datos suficientes para mostrar estadísticas.");
+            return;
+        }
+        DoubleSummaryStatistics est = libros.stream()
+                .filter(l -> l.getTotalDescargas() > 0)
+                .mapToDouble(Libro :: getTotalDescargas)
+                .summaryStatistics();
+
+        IO.println("\n---ESTADISTICAS DE DESCARGAS---");
+        IO.println("Total de libros registrados: " + est.getCount());
+        IO.println("Proomedio de decargas: " + String.format("%.2f", est.getAverage()));
+        IO.println("Maximo de descargas: " + est.getMax());
+        IO.println("Minimo de descargas: " + est.getMin());
+        IO.println("-------------------------------\n");
+    }
+
     private Optional<DatosLibro> mapearDatos(){
         ResultadoApi datos = conversor.convertirDatos(datosJson, ResultadoApi.class);
         return datos.ResultadoDatosLibros().stream()
@@ -136,8 +153,14 @@ public class Principal {
     }
     // persistencia de datos
     private void guardarLibro(DatosLibro datosLibro) {
+        // Nos aseguramos que el libro no exista en la base de datos.
+        Optional<Libro> libroExistente = libroRepository.findByTitulo(datosLibro.titulo());
+        if (libroExistente.isPresent()) {
+            IO.println("El libro ya existe en la base de datos.");
+            IO.println(datosLibro.titulo());
+        }else {
         // Nos aseguramos que el autor exista en la base de datos o lo creamos
-        var datosAutor = datosLibro.autores().get(0);
+        var datosAutor = datosLibro.autores().getFirst();
         Autor autor = autorRepository.findByNombre(datosAutor.nombre())
                 .orElseGet(() -> {
                     Autor nuevoAutor = new Autor(datosAutor);
@@ -147,5 +170,6 @@ public class Principal {
         Libro libro = new Libro(datosLibro);
         libro.setAutor(autor);
         libroRepository.save(libro);
+        }
     }
 }
